<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nz.org.cacophony.cacophonometer.SetupActivity"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"

        >

        <RelativeLayout
            android:id="@+id/relative_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >

...
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                />

            <EditText
                android:id="@+id/setupGroupNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rect_text_edit"
                android:ems="10"
                android:hint="@string/group_name"
...
                android:layout_below="@id/deviceNameLabel"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/setupRegisterButton"
                android:text="@string/register"
                android:layout_height="wrap_content"
                android:onClick="registerButton"
                android:layout_width="match_parent"

                android:layout_below="@id/setupDeviceNameInput"
...
                android:layout_below="@id/setupRootTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <CheckBox
                android:id="@+id/cbHasRootAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rootMessage"
                android:checked="false"
                android:onClick="onCheckboxRootedClicked"
                android:text="@string/phone_is_rooted_and_app_installed_as_system_app" />
...
                android:layout_below="@id/setupOffLineModeTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <CheckBox
                android:id="@+id/cbOffLineMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/OffLineModeMessage"
                android:checked="false"
                android:onClick="onCheckboxOffLineModeClicked"
                android:text="@string/offline_mode_cb_message" />
...
                android:layout_below="@id/setupOnlineModeTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <CheckBox
                android:id="@+id/cbOnLineMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/onLineModeMessage"
                android:checked="false"
                android:onClick="onCheckboxOnLineModeClicked"
                android:text="@string/online_mode_cb_message" />
...
                android:layout_height="wrap_content"
                android:layout_below="@id/testingMessage"
                android:checked="false"
                android:onClick="onCheckboxShortRecordingsClicked"
                android:text="@string/use_short_record_cb_message" />
            <CheckBox
                android:id="@+id/cbUseTestServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbShortRecordings"
                android:checked="false"
                android:onClick="onCheckboxUseTestServerClicked"
                android:text="@string/use_test_server_cb_message" />
...
