...
    <string name="device_not_registered">Device Not Registered</string>
    <string name="group_name_label">Group Name</string>
    <string name="device_name_label">Device Name</string>
    <string name="to_register_title">To register this device</string>

    <string name="to_register_instructions">(Choose Help from the menu for full instructions): \n\n1) Register on the Bird Monitor data server (https://browse.cacophony.org.nz/). \n\n2) Create a Group name on the data server, \n\n3) Enter the Group name in the field below and press Register button, \n\n4) Check that the text below says - device (your device name) is registered in group (your group
    <string name="register">Register</string>
    <string name="unregister">unregister</string>
    <string name="record_now">Record Now</string>

    <string name="off">Off - Will not override any settings.</string>
    <string name="normal_mode">Normal Mode.</string>

...
    <string name="wizard_introduction">If you haven\'t already done so, register on the Cacophony website and create a group.</string>
    <string name="choose_mode_message">Select a mode to override the options selected in settings (uses most appropriate values).</string>
    <string name="location_not_set">GPS Location not set.</string>
    <string name="update_gps_location">Update GPS Location</string>

    <string name="help">Help</string>
    <string name="settings">Settings</string>


    <string name="device_id">Device ID:</string>

    <string name="gps_text">GPS location: </string>
    <string name="message_text">Messages: </string>message_text
...
    <string name="offline_mode_message">If you know that you will not have a network connection, use this so you do not have to register with the server.  It will also save power.  You may want to use a micro SD card to make it easier to retrieve the recordings</string>
    <string name="online_mode_message">If you are using remote access software, select this to prevent \'airplane mode\' activating.</string>

    <string name="warning_sound_message">Play a short waning sound before a recording is made (useful for when out walking with the phone)</string>
    <string name="frequency_message">You can change the frequency of the following settings.  Swipe to next screen when ready.</string>
    <string name="use_short_record_cb_message">Use short recordings.</string>
    <string name="use_test_server_cb_message">Use the Test Server (You will need to register device).</string>
    <string name="use_very_frequent_recordings_cb_message">Use very frequent recordings.</string>
    <string name="use_frequent_uploads_cb_message">Use frequent uploads.</string>
    <string name="ignore_low_battery_cb_message">Keep recording when battery is low.</string>
    <string name="frequent_recordings_cb_message">Record more often.</string>
    <string name="offline_mode_cb_message">Offline (no network connection) mode</string>
    <string name="online_mode_cb_message">Keep internet connection always on.</string>
...


    <string name="help_setup">Setup your phone</string>

    <string name="group_name">Group name</string>

    <string name="refresh">Refresh</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
...
    <string name="enter_a_new_group_here">Enter a new Group Here</string>
    <string name="attempting_to_creat">Attempting to create user - please wait</string>
    <string name="Record_with_low_battery_is_ON">Record with low battery is ON</string>

    <string name="bird_count_message">Press the ? for an explanation of this feature.</string>
    <string name="basic_setup">Basic Setup</string>
    <string name="vitals">Vitals</string>
    <string name="five_minute_bird_count">5 min Bird Count</string>
    <string name="gps_location">GPS Location</string>
    <string name="advanced">Advanced</string>
    <string name="disable_recording">Disable Recording</string>
    <string name="enable_recording">Enable Recording</string>
    <string name="very_advanced">Very Advanced</string>
...
